@@ -90,10 +90,10 @@ for the network connection."
 				  ?h host
 				  ?p (number-to-string port))))
 	 ;; Start the TLS program.
-	 (process (apply #'start-process
-			 (format "*tls-%s*" host) nil
-			 rudel-tls-client-program
-			 (split-string arguments " "))))
+	 (process   (apply #'start-process
+			   (format "*tls-%s*" host) nil
+			   rudel-tls-client-program
+			   (split-string arguments " "))))
 
     ;; Immediately stop the process after creation. This is not early
     ;; enough, but the best we can do. At least we hand out the
@@ -103,7 +103,7 @@ for the network connection."
     ;; Store filter function and attach proxy filter to handle TLS
     ;; handshake.
     (when filter
-      (rudel-set-process-object process filter :old-filter))
+      (process-put process :old-filter filter))
     (set-process-filter process #'rudel-tls-wait-init)
 
     ;; Attach sentinel function.
@@ -111,7 +111,7 @@ for the network connection."
       (set-process-sentinel process sentinel))
 
     ;; Mark the process as supporting TLS encryption
-    (rudel-set-process-object process t :supports-tls)
+    (process-put process :supports-tls t)
 
     process)
   )
@@ -121,8 +121,7 @@ for the network connection."
 This only works if PROCESS has been created by
 `rudel-tls-make-process'."
   ;; Save current filter function.
-  (rudel-set-process-object
-   process (process-filter process) :old-filter)
+  (process-put process :old-filter (process-filter process))
   ;; Install TLS handshake filter function and signal program to start
   ;; TLS handshake.
   (message "tls-start-tls: switching to \"handshake\" filter")
@@ -133,12 +132,12 @@ This only works if PROCESS has been created by
 (defun rudel-tls-wait-init (process data)
   "Is installed as process filter on PROCESS until gnutls is done printing messages."
   ;; Retrieve complete lines.
-  (let ((buffer (rudel-process-object process :buffer)))
+  (let ((buffer (process-get process :buffer)))
     (rudel-assemble-fragments data buffer #'rudel-assemble-lines)
-    (rudel-set-process-object process buffer :buffer))
+    (process-put process :buffer buffer))
 
   (let ((client-data)
-	(old-filter (rudel-process-object process :old-filter))
+	(old-filter (process-get process :old-filter))
 	(client-mode))
 
     ;; Assemble lines that were not generated by gnutls. It is very
@@ -163,12 +162,12 @@ This only works if PROCESS has been created by
 (defun rudel-tls-wait-handshake (process data)
   "Is installed as process filter on PROCESS while gnutls is doing the TLS handshake."
   ;; Retrieve complete lines.
-  (let ((buffer (rudel-process-object process :buffer)))
+  (let ((buffer (process-get process :buffer)))
     (rudel-assemble-fragments data buffer #'rudel-assemble-lines)
-    (rudel-set-process-object process buffer :buffer))
+    (process-put process :buffer buffer))
 
   (let ((client-data)
-	(old-filter  (rudel-process-object process :old-filter))
+	(old-filter  (process-get process :old-filter))
 	(client-mode))
 
     ;; Assemble lines that were not generated by gnutls. It is very
@@ -188,18 +187,18 @@ This only works if PROCESS has been created by
     (when client-mode
       (message "tls-wait-handshake: switching to \"established\" filter")
       (set-process-filter process #'rudel-tls-established)
-      (rudel-set-process-object process t :encryption)))
+      (process-put process :encryption t)))
   )
 
 (defun rudel-tls-established (process data)
   "Is installed as process filter on PROCESS after gnutls has established TLS encryption."
   ;; Retrieve complete lines.
-  (let ((buffer (rudel-process-object process :buffer)))
+  (let ((buffer (process-get process :buffer)))
     (rudel-assemble-fragments data buffer #'rudel-assemble-lines)
-    (rudel-set-process-object process buffer :buffer))
+    (process-put process :buffer buffer))
 
   (let ((client-data)
-	(old-filter (rudel-process-object process :old-filter)))
+	(old-filter (process-get process :old-filter)))
 
     ;; Assemble lines that were not generated by gnutls.
     (rudel-loop-fragments data line
